@@ -1,3 +1,8 @@
+2014-02-28  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* src/aarch64/sysv.S (ffi_closure_SYSV): Use x29 as the
+	main CFA reg; update cfi_rel_offset.
+
 2014-02-09  Heiher  <r@hev.cc>
 
 	* src/mips/n32.S: Fix call floating point va function.
